SR-1464: NSNumber.description is not compatible between OS X and linux

- Use Swift's stringification of numbers for .description and .stringValue

- Use String(format:locale:...) with the correct format for the
  NSNumber type if locale is not nil.

- Enable use of __CFStringFormatLocalizedNumber() on
  DEPLOYMENT_TARGET_LINUX.